--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,6 @@ org.gradle.caching=true
 gradle.cache.push=false
 #org.gradle.parallel=true
 
-groupId=net.vectorcomputing
+groupId=com.github.lfeagan
 version=0.1.0
 versionQualifier=SNAPSHOT
