--- a/postgresql/build.gradle
+++ b/postgresql/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 
     // Logging
     implementation(libs.slf4j.api)
+    runtimeOnly(libs.logback.classic)
+    runtimeOnly(libs.janino)
     implementation(libs.micrometer.core)
 
     testImplementation(libs.testng)
