--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ plugins {
 
 allprojects {
     group = 'com.github.lfeagan'
+    repositories {
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+    }
 }
 
 subprojects {
